--- a/api_data_wrangling_mini_project.ipynb
+++ b/api_data_wrangling_mini_project.ipynb
@@ -177,6 +177,8 @@
    "source": [
     "# Calculate what the highest and lowest opening prices were for the stock in this period.\n",
     "data = json_data['dataset_data']['data']\n",
+    "\n",
+    "# Sort list of lists of daily stock prices by the second element of each list 'Open' in ascending order\n",
     "data.sort(key = lambda data: str(data[1]))\n",
     "print('Lowest: '+str(data[0][1]))\n",
     "print('Highest: '+str(data[len(data)-4][1]))"
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -197,8 +199,10 @@
    ],
    "source": [
     "# What was the largest change in any one day (based on High and Low price)?\n",
-    "data.sort(key = lambda data: str(data[2]-data[3]))\n",
-    "print(str(data[len(data)-1][2]-data[len(data)-1][3]))"
+    "\n",
+    "# Sort list of lists of stock prices by the difference between the third and fourth elements 'High', 'Low' in descending order\n",
+    "data.sort(key = lambda data: str(data[2]-data[3]),reverse=True)\n",
+    "print(str(data[0][2]-data[0][3]))"
    ]
   },
   {
@@ -216,13 +220,22 @@
    ],
    "source": [
     "# What was the largest change between any two days (based on Closing Price)?\n",
+    "\n",
+    "# Sort list of lists of stock prices by the first element 'Date'\n",
     "data.sort(key = lambda data: data[0])\n",
+    "\n",
+    "# Create empty list for storing changes between days\n",
     "diff = []\n",
+    "\n",
+    "# For every day, calculate the difference between the 'Close' element of that day and the day after, append each difference to the list\n",
     "for d in range(len(data)-1):\n",
     "    change = data[d+1][4]-data[d][4]\n",
     "    diff.append(change)\n",
+    "    \n",
+    "# Sort the list of differences in descending order\n",
     "diff.sort(reverse=True)\n",
     "\n",
+    "# If the largest negative change is a larger change than the largest positive change, print that\n",
     "if(diff[len(diff)-1] * -1) > diff[0]:\n",
     "    print(diff[len(diff)-1])\n",
     "else:\n",
@@ -245,7 +258,10 @@
    "source": [
     "# What was the average daily trading volume during this year?\n",
     "import statistics\n",
+    "\n",
+    "# Take the mean on all 'Traded Volume' elements from the stock price lists\n",
     "avg = statistics.mean(data[d][6] for d in range(len(data)))\n",
+    "\n",
     "print(avg)"
    ]
   },
@@ -264,6 +280,8 @@
    ],
    "source": [
     "# What was the median trading volume during this year.\n",
+    "\n",
+    "# Take the median on all 'Traded Volume' elements from the stock price lists\n",
     "med = statistics.median(data[d][6] for d in range(len(data)))\n",
     "print(med)"
    ]
