--- a/Capstone Project 1/data_wrangling_1.ipynb
+++ b/Capstone Project 1/data_wrangling_1.ipynb
@@ -285,35 +285,307 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The history saving thread hit an unexpected error (OperationalError('database is locked')).History will not be written to the database.\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'goodr' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-2cb45fb88f8c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgoodr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'goodr' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>address</th>\n",
+       "      <th>attributes</th>\n",
+       "      <th>business_id</th>\n",
+       "      <th>categories</th>\n",
+       "      <th>city</th>\n",
+       "      <th>hours</th>\n",
+       "      <th>is_open</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>name</th>\n",
+       "      <th>postal_code</th>\n",
+       "      <th>review_count</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1422 Dundas Street W</td>\n",
+       "      <td>{'BusinessParking': '{'garage': False, 'street...</td>\n",
+       "      <td>tAzdE1tRcsznfWN6TOLP3Q</td>\n",
+       "      <td>American (Traditional), Diners, Breakfast &amp; Br...</td>\n",
+       "      <td>Toronto</td>\n",
+       "      <td>{'Monday': '7:0-16:0', 'Tuesday': '7:0-16:0', ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>43.649729</td>\n",
+       "      <td>-79.429364</td>\n",
+       "      <td>Egg Sunrise Grill</td>\n",
+       "      <td>M6J 1Y5</td>\n",
+       "      <td>15</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>ON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1712 E Broadway</td>\n",
+       "      <td>{'RestaurantsDelivery': 'True', 'WheelchairAcc...</td>\n",
+       "      <td>eZqoDfBg-xOS8WdcZCYM2A</td>\n",
+       "      <td>Sandwiches, Smokehouse, Barbeque, American (Tr...</td>\n",
+       "      <td>Phoenix</td>\n",
+       "      <td>{'Monday': '11:0-16:0', 'Tuesday': '11:0-14:0'...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>33.406990</td>\n",
+       "      <td>-112.044537</td>\n",
+       "      <td>JL Smokehouse</td>\n",
+       "      <td>85040</td>\n",
+       "      <td>74</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>AZ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>497 Warren C Coleman Blvd S</td>\n",
+       "      <td>{'RestaurantsPriceRange2': '1', 'NoiseLevel': ...</td>\n",
+       "      <td>uo-40ZDaRJBoh-PY4dbCgQ</td>\n",
+       "      <td>Dominican, Restaurants, Spanish, Caribbean</td>\n",
+       "      <td>Concord</td>\n",
+       "      <td>{'Monday': '11:0-20:0', 'Tuesday': '11:0-20:0'...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35.383468</td>\n",
+       "      <td>-80.584428</td>\n",
+       "      <td>Pilón Dominican Kitchen</td>\n",
+       "      <td>28025</td>\n",
+       "      <td>18</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4409 Boulevard Saint-Laurent</td>\n",
+       "      <td>{'RestaurantsTableService': 'False', 'BikePark...</td>\n",
+       "      <td>m08WjSdWsFtZdhQqrFqjAQ</td>\n",
+       "      <td>Active Life, Yoga, Brazilian, Restaurants, Bre...</td>\n",
+       "      <td>Montréal</td>\n",
+       "      <td>{'Monday': '0:0-0:0', 'Tuesday': '8:0-18:0', '...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>45.519630</td>\n",
+       "      <td>-73.584917</td>\n",
+       "      <td>Belém Café &amp; Yoga - L'Espace Café</td>\n",
+       "      <td>H2W 1Z8</td>\n",
+       "      <td>11</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>QC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5525 Avenue de Monkland</td>\n",
+       "      <td>{'Ambience': '{'touristy': False, 'hipster': F...</td>\n",
+       "      <td>Jbj4VGceJVKXOoN0zQmFzw</td>\n",
+       "      <td>Desserts, Coffee &amp; Tea, Restaurants, Food, Cafes</td>\n",
+       "      <td>Montréal</td>\n",
+       "      <td>{'Monday': '12:0-20:0', 'Tuesday': '12:0-21:0'...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>45.476666</td>\n",
+       "      <td>-73.622197</td>\n",
+       "      <td>Dessert Cafe Momo</td>\n",
+       "      <td>H4A 1C7</td>\n",
+       "      <td>37</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>QC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3635 Las Vegas Blvd S</td>\n",
+       "      <td>{'WheelchairAccessible': 'True', 'BusinessAcce...</td>\n",
+       "      <td>iBPyahdJRP5y0t25fF2W9w</td>\n",
+       "      <td>Hotels, Food, Event Planning &amp; Services, Hotel...</td>\n",
+       "      <td>Las Vegas</td>\n",
+       "      <td>{'Monday': '0:0-0:0', 'Tuesday': '0:0-0:0', 'W...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>36.114537</td>\n",
+       "      <td>-115.172678</td>\n",
+       "      <td>Lip Smacking Foodie Tours</td>\n",
+       "      <td>89109</td>\n",
+       "      <td>257</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NV</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>609 S Trenton Ave</td>\n",
+       "      <td>{'Caters': 'False', 'BusinessParking': '{'gara...</td>\n",
+       "      <td>C3D5ww46iTU6LCWgSwM0vA</td>\n",
+       "      <td>Bakeries, Cafes, Food, Restaurants</td>\n",
+       "      <td>Wilkinsburg</td>\n",
+       "      <td>{'Monday': '0:0-0:0', 'Tuesday': '7:0-18:0', '...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40.438958</td>\n",
+       "      <td>-79.892178</td>\n",
+       "      <td>Madeleine Bakery And Bistro</td>\n",
+       "      <td>15221</td>\n",
+       "      <td>34</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>PA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>4729 W Olive Ave</td>\n",
+       "      <td>{'RestaurantsPriceRange2': '1', 'BusinessAccep...</td>\n",
+       "      <td>rNzfJ3rm6gqUnb0I_YfPcQ</td>\n",
+       "      <td>Donuts, Food, Restaurants</td>\n",
+       "      <td>Glendale</td>\n",
+       "      <td>{'Monday': '4:0-13:0', 'Tuesday': '4:0-13:0', ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33.567506</td>\n",
+       "      <td>-112.160916</td>\n",
+       "      <td>Vantastic Donuts &amp; Bagels</td>\n",
+       "      <td>85302</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>AZ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2900 Westinghouse Blvd, Ste 116</td>\n",
+       "      <td>{'Caters': 'True', 'RestaurantsTableService': ...</td>\n",
+       "      <td>jRxLnJ9my31Re_O2MvQGhw</td>\n",
+       "      <td>Thai, Caribbean, Restaurants, Indian, Fast Foo...</td>\n",
+       "      <td>Charlotte</td>\n",
+       "      <td>{'Monday': '0:0-0:0', 'Tuesday': '10:0-16:0', ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35.132820</td>\n",
+       "      <td>-80.952997</td>\n",
+       "      <td>The Tasty Bowl Subs N Such</td>\n",
+       "      <td>28273</td>\n",
+       "      <td>86</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>5527 Verona Rd</td>\n",
+       "      <td>{'RestaurantsReservations': 'False', 'WiFi': '...</td>\n",
+       "      <td>3DQKaQN2wjWTWUN0EBwkzw</td>\n",
+       "      <td>Restaurants, Pizza</td>\n",
+       "      <td>Verona</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40.482728</td>\n",
+       "      <td>-79.837817</td>\n",
+       "      <td>Della Sala's Pizza</td>\n",
+       "      <td>15147</td>\n",
+       "      <td>21</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>PA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           address  \\\n",
+       "0             1422 Dundas Street W   \n",
+       "1                  1712 E Broadway   \n",
+       "2      497 Warren C Coleman Blvd S   \n",
+       "3     4409 Boulevard Saint-Laurent   \n",
+       "4          5525 Avenue de Monkland   \n",
+       "5            3635 Las Vegas Blvd S   \n",
+       "6                609 S Trenton Ave   \n",
+       "7                 4729 W Olive Ave   \n",
+       "8  2900 Westinghouse Blvd, Ste 116   \n",
+       "9                   5527 Verona Rd   \n",
+       "\n",
+       "                                          attributes             business_id  \\\n",
+       "0  {'BusinessParking': '{'garage': False, 'street...  tAzdE1tRcsznfWN6TOLP3Q   \n",
+       "1  {'RestaurantsDelivery': 'True', 'WheelchairAcc...  eZqoDfBg-xOS8WdcZCYM2A   \n",
+       "2  {'RestaurantsPriceRange2': '1', 'NoiseLevel': ...  uo-40ZDaRJBoh-PY4dbCgQ   \n",
+       "3  {'RestaurantsTableService': 'False', 'BikePark...  m08WjSdWsFtZdhQqrFqjAQ   \n",
+       "4  {'Ambience': '{'touristy': False, 'hipster': F...  Jbj4VGceJVKXOoN0zQmFzw   \n",
+       "5  {'WheelchairAccessible': 'True', 'BusinessAcce...  iBPyahdJRP5y0t25fF2W9w   \n",
+       "6  {'Caters': 'False', 'BusinessParking': '{'gara...  C3D5ww46iTU6LCWgSwM0vA   \n",
+       "7  {'RestaurantsPriceRange2': '1', 'BusinessAccep...  rNzfJ3rm6gqUnb0I_YfPcQ   \n",
+       "8  {'Caters': 'True', 'RestaurantsTableService': ...  jRxLnJ9my31Re_O2MvQGhw   \n",
+       "9  {'RestaurantsReservations': 'False', 'WiFi': '...  3DQKaQN2wjWTWUN0EBwkzw   \n",
+       "\n",
+       "                                          categories         city  \\\n",
+       "0  American (Traditional), Diners, Breakfast & Br...      Toronto   \n",
+       "1  Sandwiches, Smokehouse, Barbeque, American (Tr...      Phoenix   \n",
+       "2         Dominican, Restaurants, Spanish, Caribbean      Concord   \n",
+       "3  Active Life, Yoga, Brazilian, Restaurants, Bre...     Montréal   \n",
+       "4   Desserts, Coffee & Tea, Restaurants, Food, Cafes     Montréal   \n",
+       "5  Hotels, Food, Event Planning & Services, Hotel...    Las Vegas   \n",
+       "6                 Bakeries, Cafes, Food, Restaurants  Wilkinsburg   \n",
+       "7                          Donuts, Food, Restaurants     Glendale   \n",
+       "8  Thai, Caribbean, Restaurants, Indian, Fast Foo...    Charlotte   \n",
+       "9                                 Restaurants, Pizza       Verona   \n",
+       "\n",
+       "                                               hours  is_open   latitude  \\\n",
+       "0  {'Monday': '7:0-16:0', 'Tuesday': '7:0-16:0', ...        1  43.649729   \n",
+       "1  {'Monday': '11:0-16:0', 'Tuesday': '11:0-14:0'...        1  33.406990   \n",
+       "2  {'Monday': '11:0-20:0', 'Tuesday': '11:0-20:0'...        0  35.383468   \n",
+       "3  {'Monday': '0:0-0:0', 'Tuesday': '8:0-18:0', '...        1  45.519630   \n",
+       "4  {'Monday': '12:0-20:0', 'Tuesday': '12:0-21:0'...        1  45.476666   \n",
+       "5  {'Monday': '0:0-0:0', 'Tuesday': '0:0-0:0', 'W...        1  36.114537   \n",
+       "6  {'Monday': '0:0-0:0', 'Tuesday': '7:0-18:0', '...        1  40.438958   \n",
+       "7  {'Monday': '4:0-13:0', 'Tuesday': '4:0-13:0', ...        0  33.567506   \n",
+       "8  {'Monday': '0:0-0:0', 'Tuesday': '10:0-16:0', ...        1  35.132820   \n",
+       "9                                               None        1  40.482728   \n",
+       "\n",
+       "    longitude                               name postal_code  review_count  \\\n",
+       "0  -79.429364                  Egg Sunrise Grill     M6J 1Y5            15   \n",
+       "1 -112.044537                      JL Smokehouse       85040            74   \n",
+       "2  -80.584428            Pilón Dominican Kitchen       28025            18   \n",
+       "3  -73.584917  Belém Café & Yoga - L'Espace Café     H2W 1Z8            11   \n",
+       "4  -73.622197                  Dessert Cafe Momo     H4A 1C7            37   \n",
+       "5 -115.172678          Lip Smacking Foodie Tours       89109           257   \n",
+       "6  -79.892178        Madeleine Bakery And Bistro       15221            34   \n",
+       "7 -112.160916          Vantastic Donuts & Bagels       85302            19   \n",
+       "8  -80.952997         The Tasty Bowl Subs N Such       28273            86   \n",
+       "9  -79.837817                 Della Sala's Pizza       15147            21   \n",
+       "\n",
+       "   stars state  \n",
+       "0    5.0    ON  \n",
+       "1    5.0    AZ  \n",
+       "2    5.0    NC  \n",
+       "3    5.0    QC  \n",
+       "4    5.0    QC  \n",
+       "5    5.0    NV  \n",
+       "6    5.0    PA  \n",
+       "7    5.0    AZ  \n",
+       "8    5.0    NC  \n",
+       "9    5.0    PA  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "goodr.head(5)"
+    "goodr.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -331,21 +603,62 @@
     }
    ],
    "source": [
-    "# Store the dataframes so they can be passed to another notebook file, then delete the variables.\n",
     "%store goodr\n",
     "%store modr\n",
     "%store poorr\n",
     "%store goodr_checkins\n",
     "%store modr_checkins\n",
     "%store poorr_checkins\n",
-    "%store restaurants\n",
-    "del goodr\n",
-    "del modr\n",
-    "del poorr\n",
-    "del goodr_checkins\n",
-    "del modr_checkins\n",
-    "del poorr_checkins\n",
-    "del restaurants"
+    "%store restaurants"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create user defined function to pivot out the attributes we want to analyze\n",
+    "import ast\n",
+    "def pivot_attributes(akeys,df):\n",
+    "    for i,r in df[df['attributes'].notna()].iterrows():\n",
+    "        # Assign the attributes column value to a dictionary\n",
+    "        attributes = r['attributes']\n",
+    "        for k in akeys:\n",
+    "            if k in attributes:\n",
+    "                if attributes[k][0] == 'u':\n",
+    "                    newval = pd.Series(attributes[k][2:-1],name=k,index=[i])\n",
+    "                elif attributes[k][0] == \"'\":\n",
+    "                    newval = pd.Series(attributes[k][1:-1],name=k,index=[i])\n",
+    "                else:\n",
+    "                    newval = pd.Series(attributes[k],name=k,index=[i])\n",
+    "                df.update(newval)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attribute_keys = ['RestaurantsReservations','WiFi','HasTV','RestaurantsDelivery','RestaurantsTakeout',\n",
+    "                  'RestaurantsGoodForGroups','OutdoorSeating','Alcohol','RestaurantsPriceRange2',\n",
+    "                  'GoodForKids','NoiseLevel','RestaurantsAttire']\n",
+    "for k in attribute_keys:\n",
+    "    goodr[k] = ''\n",
+    "    modr[k] = ''\n",
+    "    poorr[k] = ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goodr = pivot_attributes(attribute_keys,goodr)\n",
+    "goodr.head(1)"
    ]
   },
   {
