--- a/Frequentist Inference/inferential_statistics_1b-Q6.25.ipynb
+++ b/Frequentist Inference/inferential_statistics_1b-Q6.25.ipynb
@@ -701,7 +701,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__ "
+    "__A:__ z-test is not performed from a sample and is only done when population parameters are known."
    ]
   },
   {
