--- a/Capstone Project 1/data_wrangling_1.ipynb
+++ b/Capstone Project 1/data_wrangling_1.ipynb
@@ -17,7 +17,9 @@
     "- Triage restaurants into those of good, moderate and poor standing based on stars into 3 restaurant dataframes.\n",
     "- Triage checkins by restaurants standing (good, moderate, poor) into 3 restaurant checkin dataframes.\n",
     "- Parse and reshape date columns of restaurant checkin dataframes.\n",
+    "- Pivot attribute column containing dictionaries into columns in dataframes.\n",
     "- Sort and reset index for all resulting dataframes before using for analysis.\n",
+    "- Store the resulting dataframes for use in other notebooks.\n",
     "\n",
     "Data wrangling result:\n",
     "- 1 dataframe containing restaurants in good standing (4 or more stars).\n",
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,27 +349,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cols = ['Alcohol','NoiseLevel','RestaurantsAttire']\n",
+    "cols = ['WiFi','Alcohol','NoiseLevel','RestaurantsAttire']\n",
     "goodr = clean_values(cols,goodr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "modr = clean_values(cols,modr)\n",
-    "poorr = clean_values(cols,modr)"
+    "poorr = clean_values(cols,poorr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make new standing column for each restaurant dataframe and assign the respective standing value as categorical data type.\n",
+    "goodr['standing'] = 'Good'\n",
+    "goodr['standing'] = goodr['standing'].astype('category')\n",
+    "modr['standing'] = 'Moderate'\n",
+    "modr['standing'] = modr['standing'].astype('category')\n",
+    "poorr['standing'] = 'Poor'\n",
+    "poorr['standing'] = poorr['standing'].astype('category')\n",
+    "rests = pd.concat([goodr,modr,poorr])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +398,7 @@
       "Stored 'goodr_checkins' (DataFrame)\n",
       "Stored 'modr_checkins' (DataFrame)\n",
       "Stored 'poorr_checkins' (DataFrame)\n",
-      "Stored 'restaurants' (DataFrame)\n"
+      "Stored 'rests' (DataFrame)\n"
      ]
     }
    ],
@@ -391,7 +409,54 @@
     "%store goodr_checkins\n",
     "%store modr_checkins\n",
     "%store poorr_checkins\n",
-    "%store restaurants"
+    "%store rests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2241 entries, 0 to 2240\n",
+      "Data columns (total 26 columns):\n",
+      "address                     2241 non-null object\n",
+      "attributes                  2220 non-null object\n",
+      "business_id                 2241 non-null object\n",
+      "categories                  2241 non-null object\n",
+      "city                        2241 non-null object\n",
+      "hours                       1583 non-null object\n",
+      "is_open                     2241 non-null int64\n",
+      "latitude                    2241 non-null float64\n",
+      "longitude                   2241 non-null float64\n",
+      "name                        2241 non-null object\n",
+      "postal_code                 2241 non-null object\n",
+      "review_count                2241 non-null int64\n",
+      "stars                       2241 non-null float64\n",
+      "state                       2241 non-null object\n",
+      "RestaurantsReservations     2113 non-null object\n",
+      "WiFi                        1662 non-null object\n",
+      "HasTV                       1928 non-null object\n",
+      "RestaurantsDelivery         2134 non-null object\n",
+      "RestaurantsTakeout          0 non-null object\n",
+      "RestaurantsGoodForGroups    2137 non-null object\n",
+      "OutdoorSeating              1997 non-null object\n",
+      "Alcohol                     1782 non-null object\n",
+      "RestaurantsPriceRange2      2146 non-null object\n",
+      "GoodForKids                 2136 non-null object\n",
+      "NoiseLevel                  1622 non-null object\n",
+      "RestaurantsAttire           2073 non-null object\n",
+      "dtypes: float64(3), int64(2), object(21)\n",
+      "memory usage: 455.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "poorr.info()"
    ]
   },
   {
