--- a/Capstone Project 1/data_storytelling.ipynb
+++ b/Capstone Project 1/data_storytelling.ipynb
@@ -358,28 +358,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create user defined function that returns list of dataframes each containing all the reviews of one restaurant\n",
-    "def rest_reviews(df,rv):\n",
-    "    rlist = list()\n",
-    "    for bid in df['business_id']:\n",
-    "        rlist.append(rv[rv['business_id']==bid])\n",
-    "    return rlist"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Randomly select restaurants from those in good standing\n",
     "grs8 = goodr[goodr['business_id'].isin(goodrv.business_id)].sample(n=8)\n",
     "# Get the reviews for the randomly selected restaurants \n",
-    "grvs = rest_reviews(grs8,goodrv)"
+    "grvs = [goodrv[goodrv['business_id']==x] for x in grs8.business_id]"
    ]
   },
   {
@@ -459,8 +445,10 @@
    "source": [
     "# Randomly select 8 restaurants from those in moderate standing\n",
     "mrs8 = modr[modr['business_id'].isin(modrv.business_id)].sample(n=8)\n",
+    "\n",
     "# Get the reviews for the randomly selected restaurants\n",
-    "mrvs = rest_reviews(mrs8,modrv)\n",
+    "mrvs = [modrv[modrv['business_id']==x] for x in mrs8.business_id]\n",
+    "\n",
     "# For each restaurant, pass the reviews to mean in range function \n",
     "# and obtain the means of the ratings for every 180 days\n",
     "mmds = list()\n",
@@ -547,8 +535,8 @@
     "             poorr['business_id'].isin(poorrv.business_id)].sample(n=8)\n",
     "                                                                                                            \n",
     "# Get the reviews for the randomly selected restaurants\n",
-    "prvs = rest_reviews(prs8,poorrv)\n",
-    "                                                                                                            \n",
+    "prvs = [poorrv[poorrv['business_id']==x] for x in prs8.business_id]\n",
+    "\n",
     "# For each restaurant, pass the reviews to mean in range function \n",
     "# and obtain the means of the ratings for every 180 days\n",
     "pmds = list()\n",
@@ -1168,6 +1156,44 @@
     "%store poorrv\n",
     "%store modrv\n",
     "%store goodrv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following commands were written to file `mean_in_range.py`:\n",
+      "# Create user defined function to calculate the mean star rating within specified number of days\n",
+      "def mean_in_range(dayrange,df):\n",
+      "    stars = list()\n",
+      "    fromd = df.iloc[0]['date']\n",
+      "    means = list()\n",
+      "    meandates = list()\n",
+      "    lastd = df.iloc[0]['date']\n",
+      "    for s,d in zip(df['stars'],df['date']):\n",
+      "        if abs((d - fromd).days) <= dayrange:\n",
+      "            stars.append(s)\n",
+      "            lastd = d\n",
+      "        else:\n",
+      "            means.append(np.mean(stars))\n",
+      "            meandates.append(lastd)\n",
+      "            stars = [s]\n",
+      "            fromd = d\n",
+      "            lastd = d\n",
+      "    if stars:\n",
+      "        means.append(np.mean(stars))\n",
+      "        meandates.append(df.iloc[-1]['date'])\n",
+      "    return means,meandates\n"
+     ]
+    }
+   ],
+   "source": [
+    "%save mean_in_range.py 4"
    ]
   },
   {
