--- a/Capstone Project 1/data_wrangling_1.ipynb
+++ b/Capstone Project 1/data_wrangling_1.ipynb
@@ -38,6 +38,7 @@
    "source": [
     "import pandas as pd\n",
     "import json\n",
+    "import datetime as dt\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
     "\n",
@@ -84,9 +85,9 @@
      "text": [
       "(161950, 2)\n",
       "(59371, 14)\n",
-      "Index(['address', 'attributes', 'business_id', 'categories', 'city', 'hours',\n",
-      "       'is_open', 'latitude', 'longitude', 'name', 'postal_code',\n",
-      "       'review_count', 'stars', 'state'],\n",
+      "Index(['business_id', 'name', 'address', 'city', 'state', 'postal_code',\n",
+      "       'latitude', 'longitude', 'stars', 'review_count', 'is_open',\n",
+      "       'attributes', 'categories', 'hours'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -198,22 +199,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>--1UhMGODdWsrMastO9DZw</td>\n",
        "      <td>2016-04-26 19:49:16, 2016-08-30 18:36:57, 2016...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "      <td>--9e1ONYQuAa-CB_Rrw7Tw</td>\n",
        "      <td>2010-02-08 05:56:47, 2010-02-15 04:47:42, 2010...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <td>10</td>\n",
        "      <td>--FBCX-N37CMYDfs790Bnw</td>\n",
        "      <td>2010-05-31 07:57:10, 2010-05-31 07:58:37, 2010...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
+       "      <td>26</td>\n",
        "      <td>--cZ6Hhc9F7VkKXxHMVZSQ</td>\n",
        "      <td>2010-04-24 19:48:58, 2010-05-01 19:28:23, 2010...</td>\n",
        "    </tr>\n",
@@ -244,9 +245,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import datetime parse date column in checkin dataframes\n",
-    "import datetime as dt\n",
-    "\n",
     "# Create function for parsing dates and reshaping checkin dataframe. \n",
     "# Returns new dataframe with one row for each checkin date of each restaurant.\n",
     "def transform_df(df):\n",
@@ -275,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -414,49 +412,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2241 entries, 0 to 2240\n",
-      "Data columns (total 26 columns):\n",
-      "address                     2241 non-null object\n",
-      "attributes                  2220 non-null object\n",
-      "business_id                 2241 non-null object\n",
-      "categories                  2241 non-null object\n",
-      "city                        2241 non-null object\n",
-      "hours                       1583 non-null object\n",
-      "is_open                     2241 non-null int64\n",
-      "latitude                    2241 non-null float64\n",
-      "longitude                   2241 non-null float64\n",
-      "name                        2241 non-null object\n",
-      "postal_code                 2241 non-null object\n",
-      "review_count                2241 non-null int64\n",
-      "stars                       2241 non-null float64\n",
-      "state                       2241 non-null object\n",
-      "RestaurantsReservations     2113 non-null object\n",
-      "WiFi                        1662 non-null object\n",
-      "HasTV                       1928 non-null object\n",
-      "RestaurantsDelivery         2134 non-null object\n",
-      "RestaurantsTakeout          0 non-null object\n",
-      "RestaurantsGoodForGroups    2137 non-null object\n",
-      "OutdoorSeating              1997 non-null object\n",
-      "Alcohol                     1782 non-null object\n",
-      "RestaurantsPriceRange2      2146 non-null object\n",
-      "GoodForKids                 2136 non-null object\n",
-      "NoiseLevel                  1622 non-null object\n",
-      "RestaurantsAttire           2073 non-null object\n",
-      "dtypes: float64(3), int64(2), object(21)\n",
-      "memory usage: 455.3+ KB\n"
-     ]
+     "data": {
+      "text/plain": [
+       "543"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "poorr.info()"
+    "len(rests.city.unique())"
    ]
   },
   {
@@ -483,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
