--- a/naive_bayes/Mini_Project_Naive_Bayes.ipynb
+++ b/naive_bayes/Mini_Project_Naive_Bayes.ipynb
@@ -522,6 +522,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "There is a significant drop in test score from score on the training data set. This may signify that the classifier has overfitted the model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Picking Hyperparameters for Naive Bayes and Text Maintenance"
    ]
   },
