--- a/Capstone Project 2/notebooks/eda.ipynb
+++ b/Capstone Project 2/notebooks/eda.ipynb
@@ -76,6 +76,36 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "plK-2gu1pK3G",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 124
+        },
+        "outputId": "29d9dc29-3dd8-4134-8a31-34daeb0c8c17"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "C6-Bz0Q24RQM",
@@ -97,17 +127,17 @@
       "metadata": {
         "id": "DXIii60b4RQO",
         "colab_type": "code",
+        "outputId": "87dd7c45-6a7d-44e8-aaed-2a0429c85bf2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 202
-        },
-        "outputId": "f7542f7b-e21b-4a06-d6ee-04106b25489e"
+        }
       },
       "source": [
         "df = pd.read_csv('train.csv', parse_dates=[\"date\"])\n",
         "df.head()"
       ],
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -189,7 +219,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 2
         }
       ]
     },
@@ -198,16 +228,16 @@
       "metadata": {
         "id": "90mjoBFL4RQX",
         "colab_type": "code",
+        "outputId": "4e67f78b-23d9-4ba0-a374-951e0197e687",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 294
-        },
-        "outputId": "9a2faf2f-e04c-4a59-8840-fb7adc363501"
+        }
       },
       "source": [
         "df.describe()"
       ],
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -304,7 +334,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 3
         }
       ]
     },
@@ -323,16 +353,16 @@
       "metadata": {
         "id": "FwkKUhpm4RQg",
         "colab_type": "code",
+        "outputId": "4815749a-b7aa-438c-ad98-1f14d3998e50",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "16d7ece0-b45e-4bf2-afc3-7aa77e123d62"
+        }
       },
       "source": [
         "print('Time period start: {}\\nTime period end: {}'.format(df.date.min(),df.date.max()))"
       ],
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,16 +379,16 @@
       "metadata": {
         "id": "-uw9WVjA4RQl",
         "colab_type": "code",
+        "outputId": "b57e0388-5db8-4db7-9c72-ec418a38e032",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "6961575a-065c-41b1-9571-3b4ec95a7e1b"
+        }
       },
       "source": [
         "df.columns"
       ],
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -370,7 +400,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 5
         }
       ]
     },
@@ -379,16 +409,16 @@
       "metadata": {
         "id": "CkoGBKH_4RQr",
         "colab_type": "code",
+        "outputId": "91354028-0fe0-4cc6-afbe-d5f12d961126",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "9a3324c2-4311-4396-a7f5-ec2ff7ecf62c"
+        }
       },
       "source": [
         "df.shape"
       ],
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -400,7 +430,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 6
         }
       ]
     },
@@ -447,17 +477,17 @@
       "metadata": {
         "id": "lmAmAz4u4RQ5",
         "colab_type": "code",
+        "outputId": "11657b47-2731-4958-f033-ee1d2fda7ee3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 443
-        },
-        "outputId": "71303650-906c-4038-9e49-e08b8fb9ad12"
+        }
       },
       "source": [
         "df_month.plot(figsize=(15,6))\n",
         "plt.show()"
       ],
-      "execution_count": 14,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -492,11 +522,11 @@
       "metadata": {
         "id": "mopGH_I14RQ9",
         "colab_type": "code",
+        "outputId": "bc89aa99-5710-45d0-d6e6-5e7881447c86",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 418
-        },
-        "outputId": "dcb4bcb4-c764-4033-b506-f7577a508b62"
+        }
       },
       "source": [
         "plt.figure(1)\n",
@@ -506,7 +536,7 @@
         "df.sales.plot(kind='kde',figsize=(15, 6))\n",
         "plt.show()"
       ],
-      "execution_count": 15,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -541,17 +571,17 @@
       "metadata": {
         "id": "sXvrPom34RRB",
         "colab_type": "code",
+        "outputId": "c3434ef6-4889-4697-837e-a62c499ed533",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 443
-        },
-        "outputId": "1a699374-9f7d-4d65-d8f6-c916e24e2e0b"
+        }
       },
       "source": [
         "fig, ax = plt.subplots(figsize=(15,6))\n",
         "sns.boxplot(df_month.index.year, df_month.sales, ax=ax);"
       ],
-      "execution_count": 16,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -584,11 +614,11 @@
       "metadata": {
         "id": "oPX4tnM14RRG",
         "colab_type": "code",
+        "outputId": "abc07450-83fc-42e4-d56b-63f2e9a49486",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 601
-        },
-        "outputId": "51632b38-6899-44a5-d307-3606a871165a"
+        }
       },
       "source": [
         "from pylab import rcParams\n",
@@ -597,7 +627,7 @@
         "fig = decomposition.plot()\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -642,17 +672,17 @@
       "metadata": {
         "id": "D75mNM4i4RRO",
         "colab_type": "code",
+        "outputId": "bb2c6f39-498a-4500-97b9-5362951e56ac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 228
-        },
-        "outputId": "17fb6357-9cdf-40c6-9f16-65765104b1d1"
+        }
       },
       "source": [
         "df_item_store.plot(figsize=(15,2),title='item 1 store 1')\n",
         "plt.show;"
       ],
-      "execution_count": 19,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -673,11 +703,11 @@
       "metadata": {
         "id": "vy_x7Ajn4RRS",
         "colab_type": "code",
+        "outputId": "1d6bcc30-8366-4449-c5ae-38a5caab5c02",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 418
-        },
-        "outputId": "3f899d5a-00fb-4685-f4ce-60e2f226959a"
+        }
       },
       "source": [
         "plt.figure(1)\n",
@@ -687,7 +717,7 @@
         "df[(df['item']==1) & (df['store']==1)].sales.plot(kind='kde',figsize=(15, 6))\n",
         "plt.show();"
       ],
-      "execution_count": 20,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -718,17 +748,17 @@
       "metadata": {
         "id": "VwPuyEW84RRX",
         "colab_type": "code",
+        "outputId": "7903f183-2f47-4b1a-a529-76083d443b3c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 440
-        },
-        "outputId": "beaa76e8-5132-43a5-80d3-26805bde069f"
+        }
       },
       "source": [
         "fig, ax = plt.subplots(figsize=(15,6))\n",
         "sns.boxplot(df_item_store.index.year, df_item_store.sales, ax=ax);"
       ],
-      "execution_count": 21,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -759,11 +789,11 @@
       "metadata": {
         "id": "U1bXjlOM4RRb",
         "colab_type": "code",
+        "outputId": "cfc6fc7b-45e1-45b2-f420-962c1ef8e13d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 597
-        },
-        "outputId": "be621b0d-9971-43d7-a6b5-7978d4ed0e66"
+        }
       },
       "source": [
         "rcParams['figure.figsize'] = 18, 8\n",
@@ -771,7 +801,7 @@
         "fig = decomposition.plot()\n",
         "plt.show();"
       ],
-      "execution_count": 22,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -823,11 +853,11 @@
       "metadata": {
         "id": "ZaeCBBpa4RRi",
         "colab_type": "code",
+        "outputId": "092d80b3-9a83-44ab-b1e6-c0bda797a381",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 173
-        },
-        "outputId": "491a169c-309e-4ed0-fe74-b5b004b6e68b"
+        }
       },
       "source": [
         "#Perform Dickey-Fuller test:\n",
@@ -838,7 +868,7 @@
         "    dfoutput['Critical Value (%s)'%key] = value\n",
         "print (dfoutput)"
       ],
-      "execution_count": 23,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -888,11 +918,11 @@
       "metadata": {
         "id": "3ZKgDKTq4RRq",
         "colab_type": "code",
+        "outputId": "56bc715f-3acb-43e2-e430-51d112495deb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 536
-        },
-        "outputId": "1d13193f-3aed-410c-f296-45a51126bdd3"
+        }
       },
       "source": [
         "#Get rolling statistics\n",
@@ -908,7 +938,7 @@
         "plt.title('Rolling Mean & Standard Deviation')\n",
         "plt.show();"
       ],
-      "execution_count": 25,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "display_data",
@@ -939,11 +969,11 @@
       "metadata": {
         "id": "xGlDq-Yv4RRv",
         "colab_type": "code",
+        "outputId": "0b187428-eb09-4705-8b9c-6b0e42979da4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 173
-        },
-        "outputId": "c16ce4b2-0bb6-4262-eb72-03eea5c57561"
+        }
       },
       "source": [
         "#Perform Dickey-Fuller test:\n",
@@ -954,7 +984,7 @@
         "    dfoutput['Critical Value (%s)'%key] = value\n",
         "print (dfoutput)"
       ],
-      "execution_count": 26,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -1038,50 +1068,17 @@
       "metadata": {
         "id": "CZdWowsB4RR-",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "aa8ecc59-8c59-41f7-bf35-5adfb58850c8"
+        "colab": {}
       },
       "source": [
-        "%store ts"
+        "with open('/content/drive/My Drive/Capstone Project 2/data/processed/ts.txt', 'w') as f:\n",
+        "    for item in ts:\n",
+        "        f.write(\"%s\\n\" % item)\n",
+        "\n",
+        "df.to_csv('/content/drive/My Drive/Capstone Project 2/data/processed/df.csv',index='False')"
       ],
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Stored 'ts' (list)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "l-_7_LvK4RSB",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "d059faeb-57a0-4b25-929d-36a1538927e2"
-      },
-      "source": [
-        "%store df"
-      ],
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Stored 'df' (DataFrame)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
